--- a/hello-spring/src/main/resources/application.properties
+++ b/hello-spring/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/member
+spring.datasource.url=jdbc:mysql://localhost:3306/member_schema
 # DB username
 spring.datasource.username=root
 # DB password
-spring.datasource.password=91026
+spring.datasource.password=1234
 # ??? ???? SQL? ??? ??? ??
 spring.jpa.show-sql=true
 # ???? ??? ???? DDL(create, alter, drop) ? ??? ? ?? ???? ??
